--- a/css/contact.css
+++ b/css/contact.css
@@ -3,8 +3,41 @@
     padding: 0;
 }
 
+form {
+    padding: 30px;
+    border: 1px solid #f1f1f1;
+    line-height: 1;
+    border-radius: 25px;
+    background-color: white;
+}
+
 .contact-section input {
     height: 50px;
+    border-color: #c7ac85;
+    padding: 12px 15px;
+    margin-bottom: 30px;
+    border-radius: 25px;
+    font-family: "Work Sans",sans-serif;
+    
+}
+
+.contact-section input::placeholder {
+    color: #6a4031;
+     font-size: 15px;
+}
+.contact-section textarea::placeholder {
+    color: #6a4031;
+     font-size: 15px;
+}
+
+.contact-section textarea {
+    border-color: #c7ac85;
+    font-size: 15px;
+    padding: 12px 15px;
+    margin-bottom: 30px;
+    border-radius: 25px;
+    font-family: "Work Sans",sans-serif;
+    color: #6a4031;
 }
 
 .contact-section .form-control:focus {
@@ -26,7 +59,73 @@
     padding: 10px 15px;
 }
 
+
+
+
+
+
 .btn-brown {
-   background: #6a4031;
-    color: #fff; 
+    background: #6a4031;
+    color: #fff;
+    padding: 13px 30px;
+    letter-spacing: 2px;
+    border-radius: 100px;
+    font-family: "Work Sans",sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    /* cursor: pointer; */
+    /* letter-spacing: 3px; */
+    text-transform: uppercase;
+    /* background:repeating-linear-gradient(40deg,rgba(200,200,200,0.3),rgba(0,0,0,0.3) 1px); */
+    display:inline-block ;
+    user-select:none;
+    border-radius:100px;
+    /* box-shadow:inset -3px -3px 20px 0px grey ; */
+    transition:5ms linear;
+    /* font-variant:small-caps ; */
+    /* font-weight:bold; */
+    position: relative ;
+    overflow: hidden;
+    outline:none;
+    /* -webkit-text-stroke:1px black; */
+    filter:brightness(100%);
+}
+
+
+.btn-brown:active{
+   box-shadow:inset 3px 3px 10px 0px grey ;
+   /* border:5px ridge royalblue; */
+}
+
+.btn-brown:before{
+    content:'';
+    position:absolute;
+    top:100%;
+    left:100%;
+     border-radius:100%;
+    width:0%;
+    height:0;
+    box-shadow:inset 0px 0px 20px 10px #fff; 
+    z-index:-1;
+ opacity:0;
+}
+.btn-brown:hover {
+    color: #fff;
+}
+.btn-brown:hover:before{
+  animation:0.6s 0.01s ease-out rippleEffect;
+  
+}
+
+@keyframes rippleEffect{
+   to{
+   opacity:1;
+   height:250%;
+   width:200%;
+   left:-30%;
+     top:-50%;
+   border-radius:100%;
+   background:rgba(200,200,200,0.1);
+   filter:brightness(150%);
+   }
 }
