--- a/css/categories.css
+++ b/css/categories.css
@@ -3,6 +3,20 @@
     padding: 0;
     box-sizing: border-box;
 }
+.header {
+    background: linear-gradient(45deg, #000000c7, #00000095),url('../img/hair.jpg') no-repeat;
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    color: #fff;
+    text-align: center;
+}
+
+.about-section img {
+    height: 150px;
+    margin-bottom: 20px;
+}
 
 .section-header {
     width: 60%;
