--- a/css/contact.css
+++ b/css/contact.css
@@ -3,6 +3,16 @@
     padding: 0;
 }
 
+.header {
+    background: linear-gradient(45deg, #000000c7, #00000095),url('../img/hair.jpg') no-repeat;
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    color: #fff;
+    text-align: center;
+}
+
 form {
     padding: 30px;
     border: 1px solid #f1f1f1;
