--- a/css/product.css
+++ b/css/product.css
@@ -3,6 +3,16 @@
     padding: 0;
 }
 
+.header {
+    background: linear-gradient(45deg, #000000c7, #00000095),url('../img/hair.jpg') no-repeat;
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    color: #fff;
+    text-align: center;
+}
+
 .products-section {
     /* background: linear-gradient(270deg, #978262, #f8dcc6, #978262); */
      background:  #f8dcc6;
