--- a/css/categories.css
+++ b/css/categories.css
@@ -3,6 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    font-family: 'Times New Roman', Times, serif;
+}
+
 .header {
     background: linear-gradient(45deg, #000000c7, #00000095),url('../img/hair.jpg') no-repeat;
     height: 200px;
