--- a/css/contact.css
+++ b/css/contact.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    font-family: 'Times New Roman', Times, serif;
+}
 
 .header {
     background: linear-gradient(45deg, #000000c7, #00000095),url('../img/hair.jpg') no-repeat;
