--- a/css/product.css
+++ b/css/product.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+body{
+    font-family: 'Times New Roman', Times, serif;
+}
+
 .header {
     background: linear-gradient(45deg, #000000c7, #00000095),url('../img/hair.jpg') no-repeat;
     height: 200px;
