--- a/template/header.html
+++ b/template/header.html
@@ -16,7 +16,7 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/logo/Asset-3.svg" alt="logo" class="img-fluid"></a>
+            <a class="navbar-brand" href="indexx.html"><img src="img/logo/Asset-3.svg" alt="logo" class="img-fluid"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
