--- a/template/header.html
+++ b/template/header.html
@@ -24,19 +24,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="indexx.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="indexx.html" id="home">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="about.html" id="about-us">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="products-services.html">Products</a>
+                        <a class="nav-link" href="products-services.html" id="our-products">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html" id="contact">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="categories.html">categories</a>
+                        <a class="nav-link" href="categories.html" id="categories">Categories</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
