--- a/css/abouts.css
+++ b/css/abouts.css
@@ -51,7 +51,7 @@ body{
 }
 
 #services{
-    background: linear-gradient(45deg, rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url(../images/hair-2.jpg);
+    background: linear-gradient(45deg, rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url(../img/hair-2.jpg);
     background-attachment: fixed;
     background-size: cover;
     padding: 50px 0;
