--- a/template/header.html
+++ b/template/header.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="indexx.html" id="home">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html" id="home">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html" id="about-us">About</a>
@@ -42,8 +42,8 @@
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                             aria-haspopup="true" aria-expanded="false">Account</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="register.html">Register</a>
-                            <a class="dropdown-item" href="login.html">Login</a>
+                            <a class="dropdown-item" id="register" href="register.html">Register</a>
+                            <a class="dropdown-item"id="login" href="login.html">Login</a>
                             <a class="dropdown-item" href="#">Something else here</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Separated link</a>
