--- a/css/login.css
+++ b/css/login.css
@@ -1,11 +1,10 @@
 *{
     padding: 0;
     margin: 0;
-}
-body{
     font-family: 'Times New Roman', Times, serif;
-    background: #ffff;
+    box-sizing: border-box;
 }
+
 .background{
     background:  linear-gradient(45deg,  #000000c7, #00000095), url(../img/hair.jpg) no-repeat;
     background-attachment: fixed;
