--- a/template/header.html
+++ b/template/header.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<link rel="stylesheet" href="../css/header.css">
+<link rel="stylesheet" href="./css/header.css">
 <body>
     <div class="top-nav">
         <div class="container">
