--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,20 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: Prata;
+    src: url(others/Prata-Regular.ttf);
+}
+@font-face {
+    font-family: work sans;
+    src: url(others/WorkSans-Regular.ttf);
+}
+@font-face {
+    font-family: dancer;
+    src: url(others/DancingScript-Regular.ttf);
+}
+
+
 .top-nav {
     background: linear-gradient(270deg, #978262, #cbbaa6, #978262);
     font-family: "Poppins";
