--- a/template/footer.html
+++ b/template/footer.html
@@ -67,9 +67,9 @@
                     <h3>Contact Us</h3>
                     <ul class="contact-list">
                         <li><i class="fa fa-map-marker"></i> #38 Afaha Uqua Eket, Akwa Ibom</li>
-                        <li><i class="fa fa-phone"></i> 0806700000</li>
-                        <li><i class="fa fa-envelope-o"></i> Email Us: <a href="">Support@styling.com</a></li>
-                        <li><i class="fa fa-twitter"></i> Fax: 123456</li>
+                        <li><i class="fa fa-phone"></i> 09054801472, </li>
+                        <li><i class="fa fa-envelope-o"></i> Email Us: <a href="">pereghair@gmail.com</a></li>
+                        <li><i class="fa fa-twitter"></i> Twitter: @pereg.twitter</li>
                         <li><i class="fa fa-facebook"></i> <a href="#">@pereg</a></li>
                         <li><i class="fa fa-instagram"></i> <a href="#">@pereg</a></li>
                     </ul>
